# youtube-transcriber

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  transcriber.py
youtube_transcriber/: __init__.py  cli.py  summarizer.py  transcriber.py
