[project]
name = "youtube-transcriber"
version = "0.1.0"
description = "CLI tool to generate summaries from YouTube videos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "yt-dlp>=2025.1.15",
    "openai>=1.12.0",
    "click>=8.1.8",
    "rich>=13.9.4",
]

[project.scripts]
youtube-summary = "youtube_transcriber.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["youtube_transcriber"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
